appId: com.anonymous.client.r6l8abtkq3
---
- launchApp:
    appId: com.anonymous.client.r6l8abtkq3
- tapOn:
    text: "client, http://.*:8081"
    optional: true
- extendedWaitUntil:
    visible: Native Managed List
    timeout: 90000
- tapOn: Native Managed List
- extendedWaitUntil:
    visible: Reset Mock
    timeout: 20000
- swipe:
    start: 50%, 25%
    end: 50%, 85%
- swipe:
    start: 50%, 25%
    end: 50%, 85%
- tapOn: Reset Mock
- tapOn: Clear Logs
- assertVisible: Work
- longPressOn: Work
- assertVisible: 이름 변경
- tapOn: 이름 변경
- assertVisible: ".*onAction -> cat-work / rename / menu.*"
